fixed cronjob.