@@ -1,5 +1,10 @@
 package edu.stanford.protege.versioning.services;
 
+import edu.stanford.protege.versioning.KeycloakExecutionContextHelper;
+import edu.stanford.protege.versioning.SecurityContextHelper;
+import edu.stanford.protege.versioning.entity.ReproducibleProject;
+import edu.stanford.protege.versioning.repository.ReproducibleProjectsRepository;
+import edu.stanford.protege.webprotege.ipc.ExecutionContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -21,23 +26,43 @@ public class ProjectBackupScheduler {
     @Value("${webprotege.backup.projectIds}")
     private String projectIds;
 
-    @Scheduled(cron = "0 0 23 * * ?")
+    @Autowired
+    private ReproducibleProjectsRepository reproducibleProjectsRepository;
+
+    @Autowired
+    private KeycloakService keycloakService;
+
+    @Scheduled(cron = "0 * * * * ?")
+    //    @Scheduled(cron = "0 0 23 * * ?")
     public void scheduledBackup() {
         LOGGER.info("Starting scheduled backup for all configured projects");
-        List<String> projects = Arrays.stream(projectIds.split(","))
-                .map(String::trim)
-                .filter(id -> !id.isEmpty())
-                .collect(Collectors.toList());
-        
+
+        List<String> projects = reproducibleProjectsRepository.findAll().stream()
+                .map(ReproducibleProject::getProjectId)
+                .toList();
+
         if (projects.isEmpty()) {
             LOGGER.info("No projects configured for backup");
+            return;
+        }
+        
+        // Get Keycloak access token for service authentication
+        String accessToken;
+        try {
+            accessToken = keycloakService.getAccessToken();
+            LOGGER.info("Successfully obtained Keycloak access token for scheduled backup");
+        } catch (Exception e) {
+            LOGGER.error("Failed to obtain Keycloak access token for scheduled backup", e);
             return;
         }
         
         for (String projectId : projects) {
             try {
                 LOGGER.info("Starting backup for project: {}", projectId);
-                backupService.createBackup(projectId);
+                // Use Keycloak service execution context instead of SecurityContextHelper
+                ExecutionContext executionContext = KeycloakExecutionContextHelper.createServiceExecutionContext(accessToken);
+                LOGGER.info("ALEX " + executionContext);
+              //  backupService.createBackup(projectId, KeycloakExecutionContextHelper.createServiceExecutionContext(accessToken));
                 LOGGER.info("Successfully completed backup for project: {}", projectId);
             } catch (Exception e) {
                 LOGGER.error("Failed to backup project: " + projectId, e);
